# Desk-Tools-Assemble

./: CMakeLists.txt  ConfigDlg.cpp  ConfigDlg.h  DeskToolsAssemble.cpp  DeskToolsAssemble.h  DeskToolsAssemble.rc  DeskToolsAssembleDlg.cpp  DeskToolsAssembleDlg.h  ReadMe.txt  resource.h  stdafx.cpp  stdafx.h
AES/: AES.cpp  AES.h
CommonHeader/: CommonDef.h
Conf/: DTA.cfg
FileOperation/: FileOperation.cpp  FileOperation.h
GridCtrl_src/: GridCell.cpp  GridCell.h  GridCellBase.cpp  GridCellProvider.cpp  GridCellProvider.h  GridCtrl.cpp  GridCtrl.h  GridCtrlProvider.cpp  GridCtrlProvider.h  GridItems.cpp  GridItems.h  GridItemsProvider.cpp  GridItemsProvider.h  MemDC.h
res/: DeskToolsAssemble.rc2
